--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -2,8 +2,9 @@
     height: 34vw;
     margin: 30px auto;
     background: url('/header_img.jpg') no-repeat;
-    background-size: cover; /* Changed from contain to cover for better fit */
+    background-size: cover; 
     position: relative;
+    border-radius: 15px;
 }
 
 .header-contents {
@@ -31,7 +32,7 @@
 
 .header-contents button {
     border: none;
-    color: #747474;
+    color: #222831;
     font-weight: 500;
     padding: 1vw 2.3vw;
     background: white;
